--- a/AGIMaster/AGIMaster.csproj
+++ b/AGIMaster/AGIMaster.csproj
@@ -249,6 +249,34 @@
     <Content Include="Content\Bootstrap\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\Bootstrap\js\bootstrap.js" />
     <Content Include="Content\Bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\Roller\external\jquery\jquery.js" />
+    <Content Include="Content\Roller\images\AGI_Logo.png" />
+    <Content Include="Content\Roller\images\animated-overlay.gif" />
+    <Content Include="Content\Roller\images\ui-bg_flat_55_999999_40x100.png" />
+    <Content Include="Content\Roller\images\ui-bg_flat_75_aaaaaa_40x100.png" />
+    <Content Include="Content\Roller\images\ui-bg_glass_45_0078ae_1x400.png" />
+    <Content Include="Content\Roller\images\ui-bg_glass_55_f8da4e_1x400.png" />
+    <Content Include="Content\Roller\images\ui-bg_glass_75_79c9ec_1x400.png" />
+    <Content Include="Content\Roller\images\ui-bg_gloss-wave_45_e14f1c_500x100.png" />
+    <Content Include="Content\Roller\images\ui-bg_gloss-wave_50_6eac2c_500x100.png" />
+    <Content Include="Content\Roller\images\ui-bg_gloss-wave_75_2191c0_500x100.png" />
+    <Content Include="Content\Roller\images\ui-bg_inset-hard_100_fcfdfd_1x100.png" />
+    <Content Include="Content\Roller\images\ui-icons_0078ae_256x240.png" />
+    <Content Include="Content\Roller\images\ui-icons_056b93_256x240.png" />
+    <Content Include="Content\Roller\images\ui-icons_d8e7f3_256x240.png" />
+    <Content Include="Content\Roller\images\ui-icons_e0fdff_256x240.png" />
+    <Content Include="Content\Roller\images\ui-icons_f5e175_256x240.png" />
+    <Content Include="Content\Roller\images\ui-icons_f7a50d_256x240.png" />
+    <Content Include="Content\Roller\images\ui-icons_fcd113_256x240.png" />
+    <Content Include="Content\Roller\index.html" />
+    <Content Include="Content\Roller\jquery-ui.css" />
+    <Content Include="Content\Roller\jquery-ui.js" />
+    <Content Include="Content\Roller\jquery-ui.min.css" />
+    <Content Include="Content\Roller\jquery-ui.min.js" />
+    <Content Include="Content\Roller\jquery-ui.structure.css" />
+    <Content Include="Content\Roller\jquery-ui.structure.min.css" />
+    <Content Include="Content\Roller\jquery-ui.theme.css" />
+    <Content Include="Content\Roller\jquery-ui.theme.min.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -409,6 +437,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
