--- a/AGIMaster/AGIMaster.csproj
+++ b/AGIMaster/AGIMaster.csproj
@@ -252,6 +252,7 @@
     <Content Include="Content\Roller\external\jquery\jquery.js" />
     <Content Include="Content\Roller\images\AGI_Logo.png" />
     <Content Include="Content\Roller\images\animated-overlay.gif" />
+    <Content Include="Content\Roller\images\favicon2.png" />
     <Content Include="Content\Roller\images\ui-bg_flat_55_999999_40x100.png" />
     <Content Include="Content\Roller\images\ui-bg_flat_75_aaaaaa_40x100.png" />
     <Content Include="Content\Roller\images\ui-bg_glass_45_0078ae_1x400.png" />
