You can now edit, approve, and deny orders when in an Admin Role and the user in the User Role can see the edits and the status

--- a/AGIMaster/AGIMaster.csproj
+++ b/AGIMaster/AGIMaster.csproj
@@ -193,6 +193,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\AdminOrder.cs">
+      <DependentUpon>Orders.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Order.cs">
       <DependentUpon>Orders.tt</DependentUpon>
     </Compile>
